start refactoring label maker

--- a/frontend/templates/labeling.html
+++ b/frontend/templates/labeling.html
@@ -18,7 +18,7 @@
         <b>Document #{{document.id}}</b>
     </span>
     <span class="buttons">
-        <styled-button id="submit_labels" mode="primary" disabled>Submit</styled-button>
+        <styled-button id="submit-labels" mode="primary" disabled>Submit</styled-button>
     </span>
 </header>
 {% endblock %}
