--- a/frontend/templates/project.html
+++ b/frontend/templates/project.html
@@ -2,7 +2,6 @@
 
 {% block scripts %}
 <script type="module" src="{{ url_for('static', path='/js/base/styled_link.js') }}"></script>
-<script type="module" src="{{ url_for('static', path='/js/base/checkbox_dialog.js') }}"></script>
 <script type="module" src="{{ url_for('static', path='/js/project_content.js') }}"></script>
 {% endblock %}
 
@@ -12,7 +11,7 @@
     <span class="path">
         <styled-link href="{{ url_for('projects_page') }}">Projects</styled-link>
         &nbsp;&nbsp;/&nbsp;&nbsp;
-        <b id="test2">{{project.name}}</b>
+        <b>{{project.name}}</b>
     </span>
     <span class="buttons">
     </span>
