--- a/frontend/templates/projects.html
+++ b/frontend/templates/projects.html
@@ -20,6 +20,7 @@
     <projects-content content-url="{{ url_for('list_projects') }}"
         project-gui-url="{{ url_for('project_documents_page', project_id='[ID]') }}"
         scan-url="{{ url_for('scan_project', project_id='[ID]') }}"
-        sort-img="{{ url_for('static', path='/img/chevron-up-down-outline.svg') }}"></projects-content>
+        sort-img="{{ url_for('static', path='/img/chevron-up-down-outline.svg') }}"
+        create-url="{{ url_for('create_project_page') }}"></projects-content>
 </main>
 {% endblock %}
