add project edit page

--- a/frontend/templates/projects.html
+++ b/frontend/templates/projects.html
@@ -21,6 +21,7 @@
         project-gui-url="{{ url_for('project_documents_page', project_id='[ID]') }}"
         scan-url="{{ url_for('scan_project', project_id='[ID]') }}"
         sort-img="{{ url_for('static', path='/img/chevron-up-down-outline.svg') }}"
-        create-url="{{ url_for('create_project_page') }}"></projects-content>
+        create-url="{{ url_for('create_project_page') }}"
+        edit-url="{{ url_for('edit_project_page', project_id='[ID]') }}"></projects-content>
 </main>
 {% endblock %}
