--- a/frontend/templates/projects.html
+++ b/frontend/templates/projects.html
@@ -22,6 +22,6 @@
         scan-url="{{ url_for('scan_project', project_id='[ID]') }}"
         sort-img="{{ url_for('static', path='/img/chevron-up-down-outline.svg') }}"
         create-url="{{ url_for('create_project_page') }}"
-        edit-url="{{ url_for('edit_project_page', project_id='[ID]') }}"></projects-content>
+        update-url="{{ url_for('update_project_page', project_id='[ID]') }}"></projects-content>
 </main>
 {% endblock %}
