--- a/frontend/templates/update_project.html
+++ b/frontend/templates/update_project.html
@@ -13,17 +13,19 @@
     <span class="path">
         <styled-link href="{{ url_for('projects_page') }}">Projects</styled-link>
         &nbsp;&nbsp;/&nbsp;&nbsp;
-        <b>Edit Project</b>
+        <b>Edit Project #{{project.id}}</b>
     </span>
     <span class="buttons">
-        <styled-button id="edit-project-button" mode="primary">Confirm</styled-button>
+        <styled-button id="update-project-button" mode="primary">Confirm</styled-button>
     </span>
 </header>
 {% endblock %}
 
 {% block main %}
 <main class="settings-main">
-    <project-settings-form existing-name="{{ project.name }}"
-        existing-config="{{ project.config }}"></project-settings-form>
+    <project-settings-form
+        update-project-config-url="{{ url_for('update_project_configuration', project_id=project.id) }}"
+        existing-name="{{ project.name }}" existing-config="{{ project.config }}"
+        existing="true"></project-settings-form>
 </main>
 {% endblock %}
